# rb_msgs

./: CMakeLists.txt  README.md
action/: ComputerVision.action
msg/: Analog.msg  AuboError.msg  DetectedObject.msg  Digital.msg  GoalPoint.msg  IOState.msg  RobotEvent.msg  RobotState.msg  ToolIO.msg  ToolIOStatus.msg  TrajectoryPoint.msg  Waypoint.msg
srv/: GetIK.srv  Gripper.srv  MoveLine.srv  RobotModel.srv
